@startuml

title __MOONLANDER's Class Diagram__\n

  namespace com.javarush.games.moonlander {
    class com.javarush.games.moonlander.GameObject {
        + height : int
        + matrix : int[][]
        + width : int
        + x : double
        + y : double
        + GameObject()
        + draw()
    }
  }
  

  namespace com.javarush.games.moonlander {
    class com.javarush.games.moonlander.MoonLanderGame {
        {static} + HEIGHT : int
        {static} + WIDTH : int
        - isGameStopped : boolean
        - isLeftPressed : boolean
        - isRightPressed : boolean
        - isUpPressed : boolean
        - score : int
        + initialize()
        + onKeyPress()
        + onKeyReleased()
        + onTurn()
        + setCellColor()
        - check()
        - createGame()
        - createGameObjects()
        - drawScene()
        - gameOver()
        - win()
    }
  }
  

  namespace com.javarush.games.moonlander {
    class com.javarush.games.moonlander.Rocket {
        - boost : double
        - slowdown : double
        - speedX : double
        - speedY : double
        + Rocket()
        + crash()
        + draw()
        + isCollision()
        + isStopped()
        + land()
        + move()
        - checkBorders()
        - switchFire()
    }
  }
  

  namespace com.javarush.games.moonlander {
    class com.javarush.games.moonlander.RocketFire {
        - frameIndex : int
        - frames : List<int[][]>
        - isVisible : boolean
        + RocketFire()
        + draw()
        + hide()
        + show()
        - nextFrame()
    }
  }
  

  namespace com.javarush.games.moonlander {
    class com.javarush.games.moonlander.ShapeMatrix {
        {static} + FIRE_DOWN_1 : int[][]
        {static} + FIRE_DOWN_2 : int[][]
        {static} + FIRE_DOWN_3 : int[][]
        {static} + FIRE_SIDE_1 : int[][]
        {static} + FIRE_SIDE_2 : int[][]
        {static} + LANDSCAPE : int[][]
        {static} + PLATFORM : int[][]
        {static} + ROCKET : int[][]
        {static} + ROCKET_CRASH : int[][]
    }
  }
  

  com.javarush.games.moonlander.MoonLanderGame -up-|> com.javarush.engine.cell.Game
  com.javarush.games.moonlander.MoonLanderGame o-- com.javarush.games.moonlander.GameObject : landscape
  com.javarush.games.moonlander.MoonLanderGame o-- com.javarush.games.moonlander.GameObject : platform
  com.javarush.games.moonlander.MoonLanderGame o-- com.javarush.games.moonlander.Rocket : rocket
  com.javarush.games.moonlander.Rocket -up-|> com.javarush.games.moonlander.GameObject
  com.javarush.games.moonlander.Rocket o-- com.javarush.games.moonlander.RocketFire : downFire
  com.javarush.games.moonlander.Rocket o-- com.javarush.games.moonlander.RocketFire : leftFire
  com.javarush.games.moonlander.Rocket o-- com.javarush.games.moonlander.RocketFire : rightFire
  com.javarush.games.moonlander.RocketFire -up-|> com.javarush.games.moonlander.GameObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
